# oop-mai-lab5

./: README.md
lab5/: CMakeLists.txt
lab5/include/: mem_res.hpp  queue.hpp  queue.tpp
lab5/src/: main.cpp
lab5/tests/: test_main.cpp
